fixed clipping of menu icons

--- a/ultrastar-wingman/frontend/src/components/Songs.css
+++ b/ultrastar-wingman/frontend/src/components/Songs.css
@@ -36,6 +36,7 @@
     top: -1px; /*Small bleed above search bar when scrolling on mobile -> +1 padding -1 margin to hide*/
     background: var(--bg);
     padding: 17px 0 16px 0;
+    z-index: 200;
 }
 
 .songs-search > div {
